crates/toml_edit/fixtures/invalid/key/after-array.stderr
TOML parse error at line 1, column 14
  |
1 | [[agencies]] owner = "S Cjelli"
  |              ^
Invalid table header
Expected newline, `#`
